source/html/visualizer/css/skypeCard.css
.ac-image.ac-selectable {
  cursor: pointer;
}

.skypeContainer {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: start;
      -ms-flex-align: start;
          align-items: flex-start;
}

.ac-container.ac-selectable {
  padding: 5px;
}

.ac-container.ac-selectable:hover {
  background-color: rgba(0, 0, 0, 0.1);
}

.ac-container.ac-selectable:active {
  background-color: rgba(0, 0, 0, 0.15);
}

.ac-pushButton, .ac-linkButton {
  font-family: "Segoe UI", sans-serif;
  font-size: 15px;
  font-weight: 400;
  overflow: hidden;
  text-overflow: ellipsis;
  padding: 4px 10px 6px 10px;
  text-align: center;
  vertical-align: middle;
  cursor: default;
  background-color: white;
  color: #0078d7;
}

.ac-pushButton:hover, .ac-linkButton:hover {
  background-color: #0078d7;
  color: #fff;
}

.ac-pushButton:active, .ac-linkButton:active {
  background-color: #0078d7;
  color: #fff;
}

.ac-pushButton, .ac-linkButton {
  border: solid 2px #dcdcdc;
  border-radius: 20px;
  line-height: 30px;
}

.ac-input {
  font-family: "Segoe UI", sans-serif;
  font-size: 14px;
  color: black;
}

.ac-input.ac-textInput {
  height: 30px;
  resize: none;
}

.ac-input.ac-textInput.ac-multiline {
  height: 72px;
}

.ac-input.ac-textInput, .ac-input.ac-numberInput, .ac-input.ac-dateInput, .ac-input.ac-timeInput, .ac-input.ac-multichoiceInput {
  border: 1px solid #DDDDDD;
  padding: 4px 8px 4px 8px;
}

/*Bot hexagon*/
.hexagon {
  overflow: hidden;
  visibility: hidden;
  -webkit-transform: rotate(120deg);
          transform: rotate(120deg);
  cursor: pointer;
  width: 50px;
  height: 40px;
  margin: 2px 5px -20px 0px;
}

.hexagon-in1 {
  overflow: hidden;
  width: 100%;
  height: 100%;
  -webkit-transform: rotate(-60deg);
          transform: rotate(-60deg);
}

.hexagon-in2 {
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-position: 50%;
  background-image: url(../assets/bot-framework.png);
  background-size: 50px 50px;
  visibility: visible;
  -webkit-transform: rotate(-60deg);
          transform: rotate(-60deg);
}

